--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py34,py35}-django18
+    {py27,py34,py35}-{django18,django19}
     coverage
 skipsdist = True
 
@@ -10,6 +10,7 @@ deps =
     factory-boy
     coverage
     django18: django>1.7,<1.9
+    django19: django>1.8,<2.0
 setenv =
     PYTHONPATH = {toxinidir}/src
 commands = python runtests.py
